# face-value

./: .gitignore  Cargo.toml  README.md  Trunk.toml  deploy.sh  index.html  serve.sh  test-local.sh  test.html
.github/workflows/: deploy.yml
scripts/: deploy.sh  serve.sh
src/: app.rs  lib.rs  main.rs
static/: index.html
