[package]
name = "face-value"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { version = "0.4.0", features = ["web"] }
chrono = { version = "0.4.31", features = ["wasmbind"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Window", "Location", "Document", "HashChangeEvent"] }

# Enable better optimizations for WASM
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
