[package]
name = "face-value"
version = "0.1.0"
edition = "2021"
description = "A simple debt value calculator that runs in the browser"
repository = "https://github.com/bugos/face-value"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
chrono = { version = "0.4.31", features = ["wasmbind"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    "Window",
    "Location",
    "Document"
]}

# Enable better optimizations for WASM
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
